--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     earum iusto.</p>
             </div>
             <div class="col">
-                <img src="/CSS/img/img-sobre.jpg" alt="imagem-sobre">
+                <img src="img/img-sobre.jpg" alt="imagem-sobre">
             </div>
         </div>
     </section>
@@ -47,12 +47,12 @@
             <div class="flex-container">
                 <div class="produtos">
                     <figure>
-                        <img src="/CSS/img/produto-1.jpg" alt="produto 1">
+                        <img src="img/produto-1.jpg" alt="produto 1">
                     </figure>
                     <h3>Pet produto #1</h3>
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
-                        <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
@@ -63,18 +63,18 @@
                     <h3>Pet produto #1</h3>
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
-                        <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
                 <div class="produtos">
                     <figure>
-                        <img src="/CSS/img/produto-3.jpg" alt="produto 1">
+                        <img src="img/produto-3.jpg" alt="produto 1">
                     </figure>
                     <h3>Pet produto #1</h3>
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
-                        <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
@@ -99,10 +99,10 @@
                             vero voluptatem suscipit eum. Repudiandae, quod?</p>
                     </div>
                     <div class="col">
-                        <img src="/CSS/img/img-galeria-1.jpg" alt="">
-                        <img src="/CSS/img/img-galeria-2.jpg" alt="">
-                        <img src="/CSS/img/img-galeria-3.jpg" alt="">
-                        <img src="/CSS/img/img-galeria-4.jpg" alt="">
+                        <img src="img/img-galeria-1.jpg" alt="">
+                        <img src="img/img-galeria-2.jpg" alt="">
+                        <img src="img/img-galeria-3.jpg" alt="">
+                        <img src="img/img-galeria-4.jpg" alt="">
                     </div>
                 </div>
             </div>
