--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petshop Mary & Gabi</title>
-    <link rel="stylesheet" href="/CSS/style-petshop.css">
-</head>
-
-<body>
-    <header>
-        <h1>
-            <img src="/CSS/img/logo-mari-e-gabi-petshop.svg" alt="logo-mari-e-gabi-petshop">
+ <img src="/CSS/img/logo-mari-e-gabi-petshop.svg" alt="logo-mari-e-gabi-petshop">
         </h1>
     </header>
     <nav>
@@ -35,6 +22,7 @@
             </div>
             <div class="col">
                 <img src="/CSS/img/img-sobre.jpg" alt="imagem-sobre">
+                <img src="img/img-sobre.jpg" alt="imagem-sobre">
             </div>
         </div>
     </section>
@@ -48,11 +36,13 @@
                 <div class="produtos">
                     <figure>
                         <img src="/CSS/img/produto-1.jpg" alt="produto 1">
+                        <img src="img/produto-1.jpg" alt="produto 1">
                     </figure>
                     <h3>Pet produto #1</h3>
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
                         <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
@@ -64,17 +54,20 @@
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
                         <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
                 <div class="produtos">
                     <figure>
                         <img src="/CSS/img/produto-3.jpg" alt="produto 1">
+                        <img src="img/produto-3.jpg" alt="produto 1">
                     </figure>
                     <h3>Pet produto #1</h3>
                     <p>R$150,00</p>
                     <a href="#" class="btn-pata">
                         <img src="/CSS/img/patinha-preta.png" alt="patinha preta">
+                        <img src="img/patinha-preta.png" alt="patinha preta">
                         comprar
                     </a>
                 </div>
@@ -103,6 +96,10 @@
                         <img src="/CSS/img/img-galeria-2.jpg" alt="">
                         <img src="/CSS/img/img-galeria-3.jpg" alt="">
                         <img src="/CSS/img/img-galeria-4.jpg" alt="">
+                        <img src="img/img-galeria-1.jpg" alt="">
+                        <img src="img/img-galeria-2.jpg" alt="">
+                        <img src="img/img-galeria-3.jpg" alt="">
+                        <img src="img/img-galeria-4.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -166,11 +163,9 @@
         <p>Henrique Hadmann Frazão Ribeiro</p>
     </div>
 </footer>
-
-
 </body>
-
 </html>
 
 
+</html>
 </html>
