--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
- <img src="/CSS/img/logo-mari-e-gabi-petshop.svg" alt="logo-mari-e-gabi-petshop">
+ <!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Petshop Mary & Gabi</title>
+    <link rel="stylesheet" href="style-petshop.css">
+</head>
+
+<body>
+    <header>
+<h1> 
+<img src="/CSS/img/logo-mari-e-gabi-petshop.svg" alt="logo-mari-e-gabi-petshop">
         </h1>
     </header>
     <nav>
